--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "symfony/free-mobile-notifier",
     "type": "symfony-notifier-bridge",
     "description": "Symfony Free Mobile Notifier Bridge",
-    "keywords": ["sms", "FreeMobile", "notifier", "alerting"],
+    "keywords": ["sms", "free-mobile", "notifier", "alerting"],
     "homepage": "https://symfony.com",
     "license": "MIT",
     "authors": [
